--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                   <a href="./" class="main-nav__link">Home</a>
                 </li>
                 <li class="main-nav__item">
-                  <a href="#About" class="main-nav__link">About</a>
+                  <a href="#About" class="main-nav__link">Nilesh</a>
                 </li>
                 <li class="main-nav__item">
-                  <a href="#feature" class="main-nav__link">Features</a>
+                  <a href="#feature" class="main-nav__link">Nilesh</a>
                 </li>
                 <li class="main-nav__item">
                   <a href="./scaffolding.html" class="main-nav__link">Presale</a>
