--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   <a href="#feature" class="main-nav__link">Nilesh</a>
                 </li>
                 <li class="main-nav__item">
-                  <a href="./scaffolding.html" class="main-nav__link">Presale</a>
+                  <a href="./scaffolding.html" class="main-nav__link">nilesh</a>
                 </li>
                 <li class="main-nav__item">
                   <a href="./404.html" class="main-nav__link">Stack</a>
